only alert issue remains

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
+      name="Sixty Seconds Logistics LLC"
       content="We are a professional truck dispatch company that provides quality services for owner-operators and small trucking companies. We help find the best freight load possible with the highest prices and focus on keeping you loaded on a weekly basis and much more."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
