Sixty Project Completed

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="vDGbzEnEcJLarMAvhFqqGoK3mAvjlmF1qdgIJ9zkcIw" />
     <meta
       name="Sixty Seconds Logistics LLC"
       content="We are a professional truck dispatch company that provides quality services for owner-operators and small trucking companies. We help find the best freight load possible with the highest prices and focus on keeping you loaded on a weekly basis and much more."
